# cubemap_converter

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: gl.h
dependencies/glad/src/: gl.c
scripts/: convert_data.py  example_config.toml  example_config2.toml  example_config_720.toml  fisheye_model.py  single_linear_camera.toml  utils.py
shaders/: CMakeLists.txt  fragment_cubemap.glsl  fragment_display.glsl  fragment_oversampled_cubemap.glsl  fragment_oversampled_cubemap_color.glsl  generate_shader_header.py  vertex.glsl
source/: assertions.hpp  gl_utils.cc  gl_utils.hpp  images.cc  images.hpp  main.cc  timing.hpp
